# pipe-trait

./: .editorconfig  .travis.yml  Cargo.toml  README.md  renovate.json
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: test.yaml
src/: doc.md  lib.rs  tests.rs
