[package]
name = "pipe-trait"
description = "Add `pipe` method to every type"
version = "0.1.4"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/pipe-trait"
repository = "https://github.com/KSXGitHub/pipe-trait.git"
keywords = [
  "pipe",
  "trait",
  "fp",
  "pipeline",
]
categories = ["no-std"]
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]
