[package]
name = "pipe-trait"
description = "Make it possible to chain regular functions"
version = "0.3.2"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/pipe-trait"
repository = "https://github.com/KSXGitHub/pipe-trait.git"
keywords = [
  "pipe",
  "trait",
  "fp",
  "pipeline",
]
categories = ["no-std", "rust-patterns"]
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[dev-dependencies]
futures = "^0.3.18"
